--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ margin: 0px;
 
 ul {
 margin: 0px;
-padding-left: 0px;
+padding: 0px;
 }
 
 button {
@@ -44,8 +44,12 @@ display: block;
  }
 
  /*----------Universal classes-------*/
+ .section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+ }
 .container {
-  width: 1170px;
+  width: 1200px;
   margin: 0px 215px;
 }
 
@@ -71,22 +75,25 @@ display: block;
 
 /*------- HEADER -----*/
 .header {
+border-bottom: 1px solid #ECECEC;;
+position: absolute;
+width: 1600px;
+height: 80px;
+background-color: var(--main-background-color);
 
 }
 
 .container-header {
 display: flex;
 align-items: center;
-flex-basis: 1170px;
-padding: 0px;
 margin-right: var(--main-margin);
 margin-left: var(--main-margin);
-margin-bottom: 94px;
 }
 
 .header-logo {
-display: flex;x
-align-items: center;
+display: flex;
+padding-top: 24px;
+padding-bottom: 25px;
 
 font-family: 'Raleway', sans-serif;
 font-weight: 700;
@@ -104,6 +111,7 @@ color: var(--accent-blue);
 .header-nav {
   display: flex;
 }
+
 .header-list, .item {
   display: flex;
 }
@@ -111,7 +119,6 @@ color: var(--accent-blue);
 .header-list .item + .item {
 margin-left: 50px;
 }
-
 
 .header-link {
 padding-top: 30px;
@@ -160,25 +167,29 @@ color: var(--primary-text-color);
 .header-email {
 margin-right: 50px;
 }
-/*------HERO---------------*/
-.hero {
-padding: 200px 452px;
-margin-bottom: 94px;
 
+
+/*------HERO---------------*/
+.hero-section {
+padding-top: 200px;
+margin-left: auto;
+margin-right: auto;
 background-color: var(--hero-background-color);
+text-align: center;
 }
+
 .hero-box {
 
 }
 
 .hero-title {
-max-width: 700px;
+max-width: 696px;
+margin: 0 auto;
 margin-bottom: 30px;
 
 font-weight: 900;
 font-size: 44px;
 line-height: 1.36;
-text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
 color: var(--main-background-color);
@@ -195,6 +206,11 @@ color: var(--main-background-color);
 background-color: var(--accent-blue);
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
+
+padding: 10px 32px;
+display:block;
+margin-left: auto;
+margin-right: auto;
 }
 
 .hero-btn:hover,
@@ -204,30 +220,35 @@ background: #188CE8;
 }
 
 /*-----------ABOUT-------*/
-.about {
-  margin-bottom: 94px;
-}
 
 .about-name {
 
 }
+
 .about-list {
 display: flex;
-
 margin-bottom: 9.4px;
 }
-
-
 
 .about-title {
 line-height: 1.14;
 color: var(--secondary-text-color);
 }
 
+.about-item:not(:last-child) {
+margin-right: 30px;
+}
+
 
 /*-----------WORK-------*/
-.work{
- padding: 94px var(--main-margin);
+.no-padding {
+  padding-top: 0px;
+}
+.work-list {
+  display: flex;
+}
+.work-item:not(:last-child) {
+  margin-right: 30px;
 }
 .work-title,
 .command-title  {
@@ -242,10 +263,18 @@ color: var(--secondary-text-color);
 }
 
 /*-----------COMMAND-----------*/
-.command {
-padding: 94px var(--main-margin);
-
+.command-section {
 background-color: var(--section-background-color);
+}
+.command-title{
+  margin-bottom: 50px;
+}
+
+.command-list {
+  display: flex;
+}
+.command-item:not(:last-child) {
+margin-right: 30px;
 }
 .command-name {
 font-weight: 500;
@@ -259,6 +288,9 @@ color: var(--secondary-text-color);
 font-size: 16px;
 line-height: 1.18;
 text-align: center;
+}
+.commnad-wrap {
+border: 1px solid #EEEEEE;
 }
 
 /* ------CONTACTS------*/
@@ -295,19 +327,19 @@ color: var(--main-background-color);
 
 /*-----------PORTFOLIO--------*/
 /*-----------PORTFOLIO_ABOUT--------*/
-.container-about {
+
+.container-about .navidation-list {
  display: flex;
  justify-content: center;
- margin-bottom: 34px;
- max-height: 54px;
- outline: 2px solid aqua;
-}
+ /*margin-bottom: 34px;
+ max-height: 54px;*/
+ }
+ .navidation-item {
+  margin-right: 8px;
+ }
 
-.navidation-list {
-  display: flex;
-  margin-left: var(--main-margin);
-  margin-right: var(--main-margin);
-  gap: 8px;
+.navidation-item:not(:last-chils) {
+margin-right: 8px;
 }
 
 .navidation-btn {
@@ -315,8 +347,9 @@ font-family: inherit;
 font-size: 16px;
 line-height: 1.62;
 color: var(--secondary-text-color);
-background-color: var(--section-background-color);
 cursor: pointer;
+background: #F5F4FA;
+border-radius: 4px;
 }
 
 .navidation-btn:hover,
@@ -333,15 +366,17 @@ border-radius: 4px;
 /*-----------PORTFOLIO_WORKS--------*/
 
 .portfolio-list {
-display: flex;
-flex-wrap: wrap;
-margin-bottom: 94px;
-outline: 2px solid aqua;
+  display: flex;
+  flex-wrap: wrap;
 }
+
+
 
 .portfolio-item {
 width: calc((100% - 60px)/3);
 margin-right: 30px;
+margin-bottom: 30px;
+display: inline-block;
 }
 
 .portfolio-item:nth-child(3n) {
@@ -355,7 +390,6 @@ width: 1170px;
 display: flex;
 flex-wrap: wrap;
 gap: 30px;
-margin-bottom: 94px;
 }
 
 .portfolio-item {
@@ -367,19 +401,32 @@ margin-right: 0px;
 }
 */
 
+
 .portfolio-title {
 font-weight: 700;
 font-size: 18px;
 line-height: 2;
 letter-spacing: 0.06em;
 color: var(--secondary-text-color);
+margin-left: 24px;
+margin-top: 20px;
 }
 
 .portfolio-name {
 font-size: 16px;
 line-height: 1.88;
 letter-spacing: 0.03em;
+margin-left: 24px;
+
 }
+
+.portfol-wrap {
+border: 1px solid #EEEEEE;
+width: 370px;
+height: 110px;
+}
+
+/*--Footer--*/
 
 .contacts-email:hover,
 .contacts-email:focus {
