--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,8 @@ margin-left: var(--main-margin);
 display: flex;
 padding-top: 24px;
 padding-bottom: 25px;
-
+margin-right: 90px;
+max-width: 145px;
 font-family: 'Raleway', sans-serif;
 font-weight: 700;
 font-size: 26px;
