--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
     --hero-background-color:#2F303A;
     --main-margin: 215px;
     --margin-between-items: 30px;
+    --border-bottom: 1px solid #ECECEC;
     }
 
 /* secondary text color 212121 */
@@ -21,7 +22,8 @@ p, h1, h2, h3, h4, h5, h6 {
 margin: 0px;
 }
 
-ul {
+ul,
+ol {
 margin: 0px;
 padding: 0px;
 }
@@ -51,7 +53,8 @@ display: block;
  }
 .container {
   width: 1200px;
-  margin: 0px 215px;
+  margin: 0px auto;
+  padding: 0 15px;
 }
 
  /* ---- Universal -----*/
@@ -76,26 +79,23 @@ display: block;
 
 /*------- HEADER -----*/
 .header {
-border-bottom: 1px solid #ECECEC;;
-width: 1600px;
-height: 80px;
-background-color: var(--main-background-color);
-
+border-bottom: var(--border-bottom)
 }
 
 .container-header {
-display: flex;
-align-items: center;
-margin-right: var(--main-margin);
-margin-left: var(--main-margin);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
 }
 
 .header-logo {
-display: flex;
-padding-top: 24px;
-padding-bottom: 25px;
-margin-right: 90px;
-max-width: 145px;
+margin-right: 93px;
+
 font-family: 'Raleway', sans-serif;
 font-weight: 700;
 font-size: 26px;
@@ -104,31 +104,44 @@ letter-spacing: 0.03em;
 color: var(--accent-blue);
 }
 
-.header-accent {
-  color: var(--secondary-text-color);
-  margin-right: 97px;
-}
-
-.header-nav {
+.header-list {
   display: flex;
 }
 
-.header-list, .item {
-  display: flex;
-}
-
-.header-list .item + .item {
-margin-left: 50px;
-}
-
-.header-link {
-padding-top: var(--margin-between-items);
-padding-bottom: var(--margin-between-items);
+.header-list .link {
+display: block;
+padding-top: 32px;
+padding-bottom: 32px;
 
 font-weight: 500;
 line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--secondary-text-color);
+}
+
+.header-list .item + .item {
+  margin-left: 50px;
+ }
+
+.header-contacts {
+ display: flex;
+}
+
+.header-contacts .item + .item {
+margin-left: 50px;
+}
+.header-contacts .link {
+display: block;
+padding-top: 32px;
+padding-bottom: 32px;
+
+line-height: 1.14;
+letter-spacing: 0.02em;
+color: var(--primary-text-color);
+}
+
+.header-accent {
+  color: var(--secondary-text-color);
 }
 
 .header-list .header-link:hover,
@@ -142,44 +155,23 @@ color: var(--secondary-text-color);
   color: var(--accent-blue);
 }
 
-.header-contacts {
-  display: flex;
-margin-left: auto;
-}
-
-.header-contacts .item +.item {
-  margin-left: 50px;
-}
-
-.header-email,
-.header-tel {
-font-weight: 500;
-line-height: 1.14;
-letter-spacing: 0.02em;
-color: var(--primary-text-color);
-}
 
 .header-email:hover,
-.header-email:active
+.header-email:active,
 .header-email:focus {
-color: var(--accent-blue);
-}
-
-.header-tel:hover,
-.header-tel:active,
-.header-tel:focus {
   color: var(--accent-blue);
 }
 
-.header-email {
-margin-right: 50px;
-color: var(--primary-text-color);
+.header-tel:hover,
+.header-tel:active
+.header-tel:focus  {
+ color: var(--accent-blue);
 }
 
 
 /*------HERO---------------*/
 .hero-section {
-padding-top: 200px;
+padding-top: 200px 0;
 margin-left: auto;
 margin-right: auto;
 background-color: var(--hero-background-color);
