--- a/css/styles.css
+++ b/css/styles.css
@@ -181,13 +181,13 @@ text-align: center;
 }
 
 .hero-box {
-
+margin-bottom: var(--margin-between-items);
 }
 
 .hero-title {
 max-width: 696px;
 margin: 0 auto;
-margin-bottom: var(--margin-between-items);
+
 
 font-weight: 900;
 font-size: 44px;
@@ -279,7 +279,7 @@ border-radius: 0px;
 }
 
 .command-item {
-  background: #FFFFFF;
+background: var(--main-background-color);
 box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 0px 0px 4px 4px;
 }
@@ -288,24 +288,27 @@ border-radius: 0px 0px 4px 4px;
 margin-right: var(--margin-between-items);
 }
 .command-name {
+margin-bottom: 10px;
+padding-top: var(--margin-between-items);
+
 font-weight: 500;
 font-size: 16px;
 line-height: 1.18;
 text-align: center;
 color: var(--secondary-text-color);
-padding-bottom: 10px;
+
 }
 
 .command-position {
+padding-bottom: var(--margin-between-items);
 font-size: 16px;
 line-height: 1.18;
 text-align: center;
-padding-bottom: var(--margin-between-items);
 }
 
 .command-wrap {
- margin-top: var(--margin-between-items);
-border-bottom: 1px solid #EEEEEE;
+ padding: 20px 24px;
+
 }
 
 /* ------CONTACTS------*/
@@ -349,7 +352,7 @@ margin-bottom: 9px;
 .navidation-list {
  display: flex;
  justify-content: center;
- padding-bottom: 50px
+ margin-bottom: 50px
  /*margin-bottom: 34px;
  max-height: 54px;*/
  }
@@ -359,12 +362,14 @@ margin-bottom: 9px;
  }
  
 .navidation-btn {
+padding: 6px 22px;
 font-family: inherit;
+font-weight: 500;
 font-size: 16px;
 line-height: 1.62;
 color: var(--secondary-text-color);
 cursor: pointer;
-background: #F5F4FA;
+background: var(--section-background-color);
 border-radius: 4px;
 border: none;
 }
@@ -375,7 +380,6 @@ border: none;
 background-color: var(--accent-blue);
 color: var(--section-background-color);
 box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-border-radius: 4px;
 }
 
 .container-about {
