--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,8 @@ display: block;
  }
 
  /*----------Universal classes-------*/
+
+ 
  section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -176,9 +178,19 @@ padding-top: 200px;
 padding-bottom: 200px;
 margin-left: auto;
 margin-right: auto;
-background-color: var(--hero-background-color);
 text-align: center;
+
+background-image: linear-gradient(rgba(47, 48, 58, 0.4),
+ rgba(47, 48, 58, 0.4)), url(../img/hero_img.jpg);
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center;
+background-color:  #C4C4C4;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+max-width: 1600px;
+margin: 0 auto;
 }
+
 
 .hero-box {
 margin-bottom: var(--margin-between-items);
@@ -307,8 +319,43 @@ text-align: center;
 }
 
 .command-wrap {
- padding: 20px 24px;
+ /*padding: 20px 24px;*/
+ margin-bottom: 16px;
+ padding-top: 20px;
+    padding-left: 24px;
+    padding-right: 24px;
+}
+.command-soc-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ padding: 20px 24px; 
+}
 
+.command-soc-item {
+  width: 44px;
+  height: 44px;
+}
+.command-soc-item:not(:last-child) {
+margin-right: 10px;
+}
+.command-soc-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+border-radius: 50%;
+color: #afb1b8;
+}
+
+.command-soc-link:hover {
+  background-color: var(--accent-blue);
+  color: var(--main-background-color);
+}
+
+.command-soc-icons {
+  fill: currentColor;
 }
 
 /* ------CONTACTS------*/
@@ -353,8 +400,6 @@ margin-bottom: 9px;
  display: flex;
  justify-content: center;
  margin-bottom: 50px
- /*margin-bottom: 34px;
- max-height: 54px;*/
  }
 
  .navidation-list .navidation-item + .navidation-item {
@@ -406,25 +451,6 @@ margin-right: 0px;
 .portfolio-item:nth-last-child(-n + 3) {
 margin-bottom: 0;
 }
-
-/* .container-portfolio {
-width: 1170px;
-}
-.portfolio-list {
-display: flex;
-flex-wrap: wrap;
-gap: 30px;
-}
-
-.portfolio-item {
- width: calc((100% - 60px)/3);
-}
-
-.portfolio-item:nth-child(3n){
-margin-right: 0px;
-}
-*/
-
 
 .portfolio-title {
 font-weight: 700;
