--- a/css/styles.css
+++ b/css/styles.css
@@ -263,7 +263,7 @@ margin-right: var(--margin-between-items);
   margin-right: var(--margin-between-items);
 }
 .work-title,
-.command-title  {
+.footer-title  {
 font-size: 36px;
 line-height: 1.16;
 text-align: center;
@@ -274,11 +274,11 @@ color: var(--secondary-text-color);
   margin-bottom: 50px;
 }
 
-/*-----------COMMAND-----------*/
+/*-----------Command-----------*/
 .command-section {
 background-color: var(--section-background-color);
 }
-.command-img {
+.footer-img {
 background: url(4853.jpg);
 border-radius: 0px;
 }
@@ -319,11 +319,9 @@ text-align: center;
 }
 
 .command-wrap {
- /*padding: 20px 24px;*/
+ padding: 20px 24px;
  margin-bottom: 16px;
- padding-top: 20px;
-    padding-left: 24px;
-    padding-right: 24px;
+
 }
 .command-soc-list {
   display: flex;
@@ -393,6 +391,53 @@ color: var(--main-background-color);
 .contacts-item:not(:last-child) {
 margin-bottom: 9px;
 }
+
+.footer-soc-text {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: var(--main-background-color);
+
+}
+
+.footer-soc-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+ padding: 20px 24px; 
+}
+
+.footer-soc-item {
+  width: 44px;
+  height: 44px;
+}
+.footer-soc-item:not(:last-child) {
+margin-right: 10px;
+}
+.footer-soc-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+border-radius: 50%;
+color: #afb1b8;
+}
+
+.footer-soc-link:hover {
+  background-color: var(--accent-blue);
+  color: var(--main-background-color);
+}
+
+.footer-soc-icons {
+  fill: currentColor;
+}
+
 /*-----------PORTFOLIO--------*/
 /*-----------PORTFOLIO_ABOUT--------*/
 
